chore: lower Java target from 21 to 17
Replace Java 21-only syntax (sealed interfaces, switch pattern
matching with when guards, List.getFirst()) with Java 17-compatible
equivalents. Production and test code both target Java 17.